--- a/ow_plugins/subred/plugin.xml
+++ b/ow_plugins/subred/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin>
-    <name>Subscribe page redirect</name>
+    <name>Subscribe page redirect_6179_skalfa </name>
     <key>subred</key>
     <description>This plugin redirects free role male users to subscribe page</description>
     <author>Skalfa</author>
