integrate firebase auth

--- a/ow_plugins/skmobileapp/application/.gitignore
+++ b/ow_plugins/skmobileapp/application/.gitignore
@@ -43,4 +43,5 @@ package.json
 resources/ios/
 resources/android/
 resources/icon.png.md5
-resources/splash.png.md5
+resources/splash.png.md5ul_web_hooks
+package-lock.json
